- Card buttons were added - User Profile (small)'s alignment has been fixed. - Mouse on hover effects were added.

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ li{
 }
 
 #box-container-2{
-    border: 3px solid blue;
     grid-column: span 9;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -81,13 +80,11 @@ li{
 
 #user-header{
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     align-items: center;
-    
 }
 
 .search-interactable{
-    /* grid-column: span 2; */
     display: grid;
     justify-self: center;
     align-items: center;
@@ -114,6 +111,7 @@ li{
 
 #search-bar{
     height: 30px;
+    width: 540px;
     border-radius: 1rem;
     padding: 10px;
     background-color: #dcdcdc;
@@ -140,17 +138,30 @@ li{
     /* Adjust user profile picture to fit the larger container */
 }
 
-#user-header > h2, .small{
-    font-size: 0.8rem;
-    grid-column: span 3;
-    margin: 0 20px;
+.bell{
     justify-self: end;
+    grid-column: span 2;
+}
+
+#user-small{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+#user-small > h2, .small{
+    font-size: 0.8rem;
+    margin: 15px 10px;
+}
+
+#user-small > h2{
+    width: 100px;
+    text-align: center;
+    margin-top: 20px;
 }
 
 #welcome{
     display: grid;
     grid-template-columns: 1fr 3fr repeat(3, 1fr);
-    border: 5px solid darkgoldenrod;
     align-items: center;
     
 }
@@ -198,36 +209,44 @@ li{
 }
 
 #projects{
-    /* border: 5px dashed green; Used as guideline */
     grid-column: span 3;
-
+    grid-row: span 2;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
-    gap: 60px;
+    gap: 20px;
     margin: 0px 32px;
 }
 
-#projects > .titles{
+.titles{
     grid-column: span 2;
+    align-self: last baseline;
 }
 
 #side-content{
-    padding: 10px;
     display: grid;
     gap: 10px;
 }
 
-#announcements{
+#content{
     display: grid;
-    align-items: center;
+    align-items: first baseline;
+}
+
+#announcements{
+    background-color: whitesmoke;
+    padding: 20px;
+    border-radius: 0.6rem;
 }
 
 .announce-comments{
-    box-shadow: 0px 2px 5px black;
+    border-bottom: 2px solid #dcdcdc;
     padding: 15px;
-    background-color: whitesmoke;
+}
+
+.announce-comments:last-child{
+    border: none;
 }
 
 .announce-comments-titles{
@@ -239,9 +258,14 @@ li{
     font-size: 1rem;
 }
 
+#content .titles{
+    margin-top: 10px;
+}
+
 #trending{
+    grid-row: span 6;
     display: grid;
-    gap: 35px;
+    gap: 25px;
     background-color: whitesmoke;
     border-radius: 0.6rem;
     padding: 15px;
@@ -276,9 +300,42 @@ li{
     border-left: 8px solid rgb(221, 195, 47);
     border-radius: 0.6rem;
     background-color: whitesmoke;
-    padding: 40px;
+    padding: 20px 40px 0;
 }
 
 #greeting-font-size{
     font-size: 0.5em;
+}
+
+#card-buttons{
+    margin: 26px 0;
+    display: grid;
+    grid-template-columns: repeat(6, 2fr);
+    justify-items: end;
+}
+
+#card-buttons > button{  
+    border: none; 
+    background-color: whitesmoke;
+    position: relative;
+    left: 300%;
+    width: 26px;
+    height: auto;
+}
+
+#card-buttons > button > img{
+    width: inherit;
+    height: auto;
+}
+
+button:hover, li:hover{
+    cursor: pointer;
+}
+
+#card-buttons > button:hover, #welcome-user-buttons > button:hover{
+    opacity: 80%;
+}
+
+li:hover{
+    filter: invert();
 }
